cursive-bootstrap/tests/ui/E-MOD/E-MOD-1106.cursive
// RUN: compile-fail
// DIAG: E-MOD-1106
// SPEC: 2.4
// DESC: Module path component is not a valid identifier

module 123invalid { } //~ ERROR E-MOD-1106

public procedure main(move ctx: Context) -> i32 {
    return 0
}
